--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
 
-        <button type="button" class="mobile-menu-open" data-menu-open>
+        <button type="button" class="mobile-menu-open js-open-menu">
             <svg class="mobile-menu-burger-icon" width="32" height="32">
                 <use href="./img/sprite.svg#burger-icon"></use>
             </svg>
@@ -46,9 +46,9 @@
         </ul>
         </div>
 
-        <div class="mobile-menu">
-            <div class="container mobile-menu-container" data-menu>
-                <button class="mobile-menu-close" data-menu-close>
+        <div class="mobile-menu js-menu-container">
+            <div class="container mobile-menu-container">
+                <button class="mobile-menu-close js-close-menu">
                     <svg class="mobile-menu-close-icon" width="8" height="8">
                         <use href="./img/sprite.svg#icon-close-btn"></use>
                     </svg>
