--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
                 <h2 class="works-title">What are we doing</h2>
                 <ul class="work-list list">
                     <li class="work-item">
-                        <img width="360" height="300" src="./img/img-1.jpg" alt="Photo 1">
+                        <img width="360" height="300" src="./img/works/img-1.jpg" alt="Photo 1">
                     </li>
                     <li class="work-item">
-                        <img width="360" height="300" src="./img/img-2.jpg" alt="Photo 2">
+                        <img width="360" height="300" src="./img/works/img-2.jpg" alt="Photo 2">
                     </li>
                     <li class="work-item">
-                        <img width="360" height="300" src="./img/img-3.jpg" alt="Photo 3">
+                        <img width="360" height="300" src="./img/works/img-3.jpg" alt="Photo 3">
                     </li>
                 </ul>
             </div>
@@ -205,7 +205,7 @@
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
-                    <li class="team-item"> <img width="264" height="260" src="./img/photo-1.jpg" alt="Photo 1">
+                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-1.jpg" alt="Photo 1">
                         <div class="team-name-position">
                             <h3 class="team-title-name">Mark Guerrero</h3>
                             <p class="position">Product Designer</p>
@@ -242,7 +242,7 @@
                         </div>
                     </li>
 
-                    <li class="team-item"> <img width="264" height="260" src="./img/photo-2.jpg" alt="Photo 2">
+                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-2.jpg" alt="Photo 2">
                         <div class="team-name-position">
                             <h3 class="team-title-name">Tom Ford</h3>
                             <p class="position">Frontend Developer</p>
@@ -281,7 +281,7 @@
                         </div>
                     </li>
 
-                    <li class="team-item"> <img width="264" height="260" src="./img/photo-3.jpg" alt="Photo 3">
+                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-3.jpg" alt="Photo 3">
                         <div class="team-name-position">
                             <h3 class="team-title-name">Camila Garcia</h3>
                             <p class="position">Marketing</p>
@@ -320,7 +320,7 @@
                         </div>
                     </li>
 
-                    <li class="team-item"> <img width="264" height="260" src="./img/photo-4.jpg" alt="Photo 4">
+                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-4.jpg" alt="Photo 4">
                         <div class="team-name-position">
                             <h3 class="team-title-name">Daniel Wilson</h3>
                             <p class="position">UI Designer</p>
