--- a/index.html
+++ b/index.html
@@ -186,13 +186,28 @@
                 <h2 class="works-title">What are we doing</h2>
                 <ul class="work-list list">
                     <li class="work-item">
-                        <img width="360" height="300" src="./img/works/img-1.jpg" alt="Photo 1">
+                        <img 
+                        width="360" 
+                        height="300" 
+                        srcset="./img/works/img-1_360px.jpg 1x, ./img/works/img-1_720px.jpg 2x"
+                        src="./img/works/img-1.jpg" 
+                        alt="Photo 1">
                     </li>
                     <li class="work-item">
-                        <img width="360" height="300" src="./img/works/img-2.jpg" alt="Photo 2">
+                        <img 
+                        width="360" 
+                        height="300" 
+                        srcset="./img/works/img-2_360px.jpg 1x, ./img/works/img-2_720px.jpg 2x"
+                        src="./img/works/img-2.jpg" 
+                        alt="Photo 2">
                     </li>
                     <li class="work-item">
-                        <img width="360" height="300" src="./img/works/img-3.jpg" alt="Photo 3">
+                        <img 
+                        width="360" 
+                        height="300" 
+                        srcset="./img/works/img-3_360px.jpg 1x, ./img/works/img-3_720px.jpg 2x"
+                        src="./img/works/img-3.jpg" 
+                        alt="Photo 3">
                     </li>
                 </ul>
             </div>
@@ -205,7 +220,15 @@
             <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
-                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-1.jpg" alt="Photo 1">
+                    <li class="team-item"> 
+
+                        <img 
+                        width="264" 
+                        height="260" 
+                        srcset="./img\team\photo-1@1x.jpg 1x, ./img\team\photo-1@2x.jpg 2x"
+                        src="./img\team\photo-1@1x.jpg" 
+                        alt="Photo 1">
+
                         <div class="team-name-position">
                             <h3 class="team-title-name">Mark Guerrero</h3>
                             <p class="position">Product Designer</p>
@@ -242,7 +265,15 @@
                         </div>
                     </li>
 
-                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-2.jpg" alt="Photo 2">
+                    <li class="team-item"> 
+
+                        <img 
+                        width="264" 
+                        height="260" 
+                        srcset="./img\team\photo-2@1x.jpg 1x, ./img\team\photo-2@2x.jpg 2x"
+                        src="./img\team\photo-2@1x.jpg" 
+                        alt="Photo 2">
+
                         <div class="team-name-position">
                             <h3 class="team-title-name">Tom Ford</h3>
                             <p class="position">Frontend Developer</p>
@@ -281,7 +312,15 @@
                         </div>
                     </li>
 
-                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-3.jpg" alt="Photo 3">
+                    <li class="team-item"> 
+
+                        <img 
+                        width="264" 
+                        height="260" 
+                        srcset="./img\team\photo-3@1x.jpg 1x, ./img\team\photo-3@2x.jpg 2x"
+                        src="./img\team\photo-3@1x.jpg" 
+                        alt="Photo 3">
+
                         <div class="team-name-position">
                             <h3 class="team-title-name">Camila Garcia</h3>
                             <p class="position">Marketing</p>
@@ -320,7 +359,15 @@
                         </div>
                     </li>
 
-                    <li class="team-item"> <img width="264" height="260" src="./img/team/photo-4.jpg" alt="Photo 4">
+                    <li class="team-item"> 
+
+                        <img 
+                        width="264" 
+                        height="260" 
+                        srcset="./img\team\photo-4@1x.jpg 1x, ./img\team\photo-4@2x.jpg 2x"
+                        src="./img\team\photo-4@1x.jpg" 
+                        alt="Photo 4">
+
                         <div class="team-name-position">
                             <h3 class="team-title-name">Daniel Wilson</h3>
                             <p class="position">UI Designer</p>
